#
# This file is processed by automake (produces file Makefile.in)
#
bin_PROGRAMS = mobile_time_grid.exe

# Additional files to be cleaned with 'make clean'
CLEANFILES = *.o *.mod 
# Compiler flags
  FC =$(NC_FC)
  AM_FCFLAGS  = $(NC_INC)
  AM_FCFLAGS += $(NC_LIB)

mobile_time_grid_exe_SOURCES = mobile_time_grid.F90
